<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.CadastroDomiciliarFireB">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".MediaActivity">

            //TITULOENDEREÇO/LOCAL DE PERMANÊNCIA
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Cadastro domiciliar"
                android:textSize="20dp"/>

            // CEP
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/cep" />

            <EditText
                android:id="@+id/editCep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:ems="10"
                android:inputType="textPostalAddress" />

            // NOME MUNICIPIO
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/nomeMunicipio" />

            <EditText
                android:id="@+id/editNomeMunicipio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:inputType="text" />

            // NOME BAIRRO
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/nomeBairro" />

            <EditText
                android:id="@+id/editNomeBairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:inputType="text" />

            // NOME ESTADO
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/nomeEstado" />

            <EditText
                android:id="@+id/editEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:inputType="text" />

            // NOME LOGRADOURO
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/nomeLogradouro" />

            <EditText
                android:id="@+id/editNomeLogradouro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:inputType="text" />

            // NUMERO
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/numero" />

            <EditText
                android:id="@+id/editNumero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:inputType="number"/>

            // NOME DO COMPLEMENTO
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/nomeComplemento" />

            <EditText
                android:id="@+id/editNomeComplemento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:inputType="text" />

            // PONTO DE REFERENCIA
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/pontoReferencia" />


            <EditText
                android:id="@+id/editPontoReferencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:inputType="text" />


            // NUMERO RESIDENCIA
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/numeroResidencia" />

            <EditText
                android:id="@+id/editNumeroResidencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:ems="10"
                android:inputType="phone" />

            // NUMERO CELULAR
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/numeroCelular" />

            <EditText
                android:id="@+id/editNumeroCelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:ems="10"
                android:inputType="phone" />

            //////////////////////////////////////////////////////////////
            //TITULO DE CONDIÇOES DE MORADIA
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Condições de Moradia"
                android:textSize="16dp"/>

            //SITUAÇÃO DA MORADIA
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/situacaoMoradia"/>

            <Spinner
                android:id="@+id/spiSituacaoMoradia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:inputType="text"/>

            //LOCALIZAÇÃO
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/localizacao"/>

            <Spinner
                android:id="@+id/spiLocalizacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:inputType="text"/>

            //TIPO DE DOMICILIO
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/tipoDomicilio"/>

            <Spinner
                android:id="@+id/spiTipoDomicilio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:inputType="text"/>

            //TIPO DE ACESSO AO DOMICILIO
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/tipoAcessoDomicilio"/>

            <Spinner
                android:id="@+id/spiTipoAcessoDomicilio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:inputType="text"/>

            //EM CASO DE AREA DE PRODUÇÃO RURAL
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/condicaoPosseTerra"/>

            <Spinner
                android:id="@+id/spiCondicaoPosseTerra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:inputType="text"/>

            // ENERGIA
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/energia"/>

            <Spinner
                android:id="@+id/spiEnergia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:inputType="text"/>

            //MATERAL NA CONSTRUÇÃO PAREDES DO DOMICILIO
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/materialConstrucao"/>

            <Spinner
                android:id="@+id/spiMaterialConstrucao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:inputType="text"/>

            //ABASTECIMENTO DE AGUA
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/abastecimentoAgua"/>

            <Spinner
                android:id="@+id/spiAbastecimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:inputType="text"/>

            //AGUA PARA CONSUMO NO DOMICILIO
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/aguaConsumoDomicilio"/>

            <Spinner
                android:id="@+id/spiAguaConsumoDomicilio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:inputType="text"/>

            //FORMA DE ESCOAMNETO DO BANHEIRO OU SANITARIO
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/escoamentoSanitario"/>

            <Spinner
                android:id="@+id/spiEscoamentoSanitario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:inputType="text"/>

            //DESTINO DO LIXO
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/destinoLixo"/>

            <Spinner
                android:id="@+id/spiDestinoLixo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:inputType="text"/>


            //ANIMAIS NO DOMICILIO
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/animaisDomicílio" />

            <EditText
                android:id="@+id/editAnimaisDomicilio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:inputType="text" />

            // ENVIAR
            <Button
                android:id="@+id/btnGravar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SALVAR"/>

            // VOLTA
            <Button
                android:id="@+id/btnVoltarTelaInicial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Voltar tela inicial" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>